<?xml version="1.0"?>
<package format="2">
  <name>xela_2f_force_control</name>
  <version>0.0.0</version>
  <description>Package to perform closed-loop force control with XELA tactile sensors and Robotiq 2F grippers</description>

  <maintainer email="gabriele.caddeo@iit.it">root</maintainer>
  <maintainer email="fabrizio.bottarel@iit.it">root</maintainer>
  <maintainer email="nicola.piga@iit.it">root</maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>xela_server</build_depend>
  <build_depend>robotiq_2f_gripper_control</build_depend>
  <build_depend>python-numpy</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>xela_server</exec_depend>
  <exec_depend>robotiq_2f_gripper_control</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <export>
  </export>

</package>
